# agctl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: docs-watcher.md
.claude/skills/pypi-publish/: SKILL.md  reference.md
.github/workflows/: test.yml
.superpowers/sdd/: task-10-report.md
agctl/: __init__.py  __main__.py  assertion_registry.py  assertions.py  cli.py  command.py  daemon.py  errors.py  output.py  params.py  plugin_protocol.py  resolution.py
agctl/clients/: db_client.py  db_driver_protocol.py  grpc_client.py  grpc_descriptors.py  http_client.py  kafka_client.py  log_backend_protocol.py  log_client.py  log_common.py
agctl/clients/db_drivers/: mysql.py  postgresql.py  sqlite.py
agctl/clients/log_backends/: __init__.py  loki.py  ndjson_file.py
agctl/commands/: __init__.py  check_commands.py  config_commands.py  db_commands.py  discover_commands.py  grpc_commands.py  http_commands.py  kafka_commands.py  kafka_listen_commands.py  logs_commands.py  mock_commands.py
agctl/config/: __init__.py  env_file.py  loader.py  migrate.py  models.py  resolver.py  validator.py
agctl/data/: sample-config.yaml
agctl/listen/: assert_eval.py  capture.py  capture_file.py  daemon.py  engine.py
agctl/mock/: __init__.py  capture.py  capture_validate.py  daemon.py  engine.py  grpc_server.py  http_server.py  jq_precompile.py  kafka_reactor.py  routing.py
agctl/serialization/: __init__.py  api.py  avro_codec.py  protobuf_codec.py  registry.py  wire.py
docs/: ARCHITECTURE.md  DESIGN.md
docs/superpowers/plans/: 2026-07-02-agctl-design-hardening.md  (+2 more)
skills/agctl/: SKILL.md
skills/agctl-config/: SKILL.md
skills/agctl-run-test-runbook/: SKILL.md
skills/agctl-write-test-runbook/: SKILL.md
tests/fixtures/: agctl.yaml  echo.proto  echo_descriptor.pb  echo_pb2.py  echo_pb2_grpc.py
tests/integration/: conftest.py  test_db_commands.py  test_grpc_commands.py  test_http_commands.py  test_kafka_commands.py  test_kafka_listen_commands.py  test_kafka_schema_registry.py  test_logs_commands.py  test_logs_loki.py  test_mock_capture_e2e.py  test_mock_commands.py  test_mock_daemon.py  test_mock_grpc.py
tests/unit/: conftest.py  test_assertion_registry.py  test_assertions.py  test_check_commands.py  test_cli.py  test_command.py  test_config_commands.py  test_config_models.py  test_config_validator.py  test_daemon_primitives.py  test_db_client.py  test_db_commands.py  test_db_driver_protocol.py  test_discover_command.py  test_discover_format.py  test_discovery.py  test_env_file.py  test_errors.py  test_grpc_assertions.py  test_grpc_client.py  test_grpc_commands.py  test_grpc_descriptors.py  test_grpc_status.py  test_http_client.py  test_http_commands.py  test_http_ping.py  test_interpolation.py  test_jq_precompile.py  test_kafka_client.py  test_kafka_client_codec.py  test_kafka_commands.py  test_kafka_commands_format.py  test_kafka_listen_assert_msgs.py  test_kafka_listen_daemon_cmds.py  test_kafka_listen_run.py  test_listen_assert_eval.py  test_listen_capture.py  test_listen_capture_file.py  test_listen_codec.py  test_listen_daemon.py  (+40 more)
(+51 files in other folders)
