[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agctl"
version = "0.1.0"
description = "Agent-facing CLI harness for testing distributed systems"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = ["httpx>=0.27"]
kafka = ["confluent-kafka>=2.4", "jq>=1.6"]
db = ["psycopg[binary]>=3.1", "jq>=1.6"]
dev = ["pytest>=8.0"]

[project.scripts]
agctl = "agctl.cli:cli"
agt = "agctl.cli:cli"

[project.entry-points."agctl.db_drivers"]
postgresql = "agctl.clients.db_drivers.postgresql:PostgreSQLDriver"

[project.entry-points."agctl.plugins"]
# Third-party protocol plugins register here, e.g.:
# grpc = "agctl_grpc:GRPCPlugin"

[tool.hatch.build.targets.wheel]
packages = ["agctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
