[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agctl"
version = "1.1.1"
description = "Agent-facing CLI harness for testing distributed systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dmitry Teryaev", email = "doudmitry@gmail.com" },
]
keywords = ["cli", "testing", "agent", "distributed-systems", "kafka", "http", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = ["httpx>=0.27"]
jq = ["jq>=1.6"]
kafka = ["confluent-kafka>=2.4", "jq>=1.6"]
db = ["psycopg[binary]>=3.1", "jq>=1.6"]
logs = ["jq>=1.6"]
dev = ["pytest>=8.0"]
integration = [
    "testcontainers",
    "agctl[db,kafka,http]",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/HumanBean17/agctl"
Repository = "https://github.com/HumanBean17/agctl"
Issues = "https://github.com/HumanBean17/agctl/issues"
Changelog = "https://github.com/HumanBean17/agctl/releases"

[project.scripts]
agctl = "agctl.cli:cli"
agt = "agctl.cli:cli"

[project.entry-points."agctl.db_drivers"]
postgresql = "agctl.clients.db_drivers.postgresql:PostgreSQLDriver"

[project.entry-points."agctl.plugins"]
# Third-party protocol plugins register here, e.g.:
# grpc = "agctl_grpc:GRPCPlugin"

[project.entry-points."agctl.assertions"]
# Third-party assertion modes register here, e.g.:
# json_schema = "agctl_jsonschema:JSONSchemaAssertion"

[project.entry-points."agctl.logs_backends"]
# Third-party log backends register here, e.g.:
# journald = "agctl_logs_journald:JournaldBackend"

[tool.hatch.build.targets.wheel]
packages = ["agctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
